--- a/css/master.css
+++ b/css/master.css
@@ -10,7 +10,14 @@ html {
 
 img {
     width: 100%;
-    padding-bottom: 15px;
+    background: white;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 5px 1px #CCC;
+    transition: all .2s cubic-bezier(0.25, 0.75, 0.25, 0.75);
+}
+
+img:hover {
+    transform: scale(1.05);
 }
 
 img.opacity {
